test/files/run/t10943.check

scala> class C extends Dynamic
                       ^
       error: extension of type scala.Dynamic needs to be enabled
       by making the implicit value scala.language.dynamics visible.
       This can be achieved by adding the import clause 'import scala.language.dynamics'
       or by setting the compiler option -language:dynamics.
       See the Scaladoc for value scala.language.dynamics for a discussion
       why the feature needs to be explicitly enabled.

scala> class C extends Dynamic
                       ^
       error: extension of type scala.Dynamic needs to be enabled
       by making the implicit value scala.language.dynamics visible.

scala> class C extends Dynamic
                       ^
       error: extension of type scala.Dynamic needs to be enabled
       by making the implicit value scala.language.dynamics visible.

scala> :quit
